# sd-archivemanager

./: .gitignore  Cargo.toml  Dockerfile
.devcontainer/: devcontainer.json
mwtext_parser/: Cargo.toml
mwtext_parser/src/: ast.rs  lexer.rs  lib.rs  parser.rs
plugins/: colons.py  quote_div.py
sd-archivemanager/: Cargo.toml
sd-archivemanager-cli/: Cargo.toml
sd-archivemanager-cli/src/: main.rs
sd-archivemanager/src/: config.rs  error.rs  guilds.rs  lib.rs  plugins.rs  regex.rs
sd-archivemanager/src/converters/: eo.rs  legislation.rs  mod.rs
