[package]
name = "sd-archivemanager"
version = "0.1.0"
edition = "2024"

[dependencies]
colored = "3.0.0"
home = "0.5.11"
lazy_static = "1.5.0"
regex = "1.11.1"
reqwest = { version = "0.12.14", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
snafu = "0.8.5"
tinytemplate = "1.2.1"
toml = "0.8.20"
xdg = "2.5.2"

[dev-dependencies]
tempdir = "0.3.7"
