[package]
name = "sd-archivemanager"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.40", features = ["serde"] }
colored = "3.0.0"
cookie_store = "0.21.1"
extism = "1.10.0"
fs = "0.0.5"
home = "0.5.11"
once_cell = "1.21.1"
regex = "1.11.1"
reqwest = { version = "0.12.14", features = ["blocking", "json", "cookies"] }
reqwest_cookie_store = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
snafu = "0.8.5"
tinytemplate = "1.2.1"
tokio = { version = "1.44.2", features = ["io-std", "sync", "fs", "macros"] }
toml = "0.8.20"
url = "2.5.4"
urlencoding = "2.1.3"
xdg = "2.5.2"

[profile.release]
strip = true
lto = true
codegen-units = 1

